syntax = "proto3";

package ordering;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "dev/restate/ext.proto";

enum DeliveryProvider{
  QUICKMEAL = 0;
  GETYOURFOOD = 1;
  DINNER2DOOR = 2;
}

message Order {
  string restaurantId = 1;
  int64 deliveryDelay = 2;
  repeated OrderItem items = 3;
}

message OrderItem {
  string productName = 1;
  int32 quantity = 2;
}

service OrderService {
  option (dev.restate.ext.service_type) = KEYED;

  rpc CreateOrder (CreateOrderRequest) returns (google.protobuf.BoolValue);

  rpc CancelOrder (CancelOrderRequest) returns (google.protobuf.BoolValue);

  rpc PrepareOrder (PrepareOrderRequest) returns (google.protobuf.Empty);

  rpc GetOrderStatus (OrderStatusRequest) returns (OrderStatusResponse);

}

message CreateOrderRequest {
  string order_id = 1 [(dev.restate.ext.field) = KEY];
  DeliveryProvider delivery_provider = 2;
  Order order = 3;
}

message CancelOrderRequest {
  string order_id = 1 [(dev.restate.ext.field) = KEY];
}

message PrepareOrderRequest {
  string order_id = 1 [(dev.restate.ext.field) = KEY];
}

service NotifierService {
  option (dev.restate.ext.service_type) = UNKEYED;

  rpc Ack (RestaurantAckRequest) returns (google.protobuf.Empty);
}

message RestaurantAckRequest {
  string awakeable_id = 1;
}

message OrderStatusRequest {
  string order_id = 1 [(dev.restate.ext.field) = KEY];
}

message OrderStatusResponse {
  string status = 1;
}
